change cb to redirect in login function

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -20,7 +20,7 @@
                   <input id="password" type="password" class="form-control" name="password">
                 </div>
                 <button disabled type="submit" class="btn btn-dark">Register</button>
-                <a class="btn btn-danger close-btn" href="/close" role="button">Exit</a>
+                <a class="btn btn-danger close-btn" href="/" role="button">Exit</a>
               </form>
 
             </div>
